@@ -1,3 +1,7 @@
+2022-08-01  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eepitch.el (find-slyprocess, eepitch-sly): new functions.
+
 2022-06-26  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-kla.el (ee-kla-demo-write-file)
